--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 asgiref==3.8.1
+boto3==1.34.139
+botocore==1.34.139
 Django==4.2.13
+django-filter==24.2
+django-storages==1.14.3
+jmespath==1.0.1
 pillow==10.4.0
 psycopg2==2.9.9
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+s3transfer==0.10.2
+six==1.16.0
 sqlparse==0.5.0
 typing-extensions==4.12.2
 tzdata==2024.1
+urllib3==1.26.19
